<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RebaActivity">

        <FrameLayout
            android:id="@+id/flAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flAdView"
        app:layout_constraintEnd_toEndOf="@+id/flAdView"
        app:layout_constraintStart_toStartOf="@+id/flAdView">

        <LinearLayout style="@style/wrapper_parent">

            <TextView
                android:id="@+id/tv_locate_neck_position"
                style="@style/title"
                android:text="@string/title_locate_neck_position_reba" />

            <Spinner
                android:id="@+id/sp_locate_neck_position"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/locate_neck_position_reba"
                android:popupBackground="@drawable/spinner" />

            <CheckBox
                android:id="@+id/cb_reba_1a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_1a_1" />

            <CheckBox
                android:id="@+id/cb_reba_1a_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_1a_2" />

            <TextView
                android:id="@+id/tv_locate_trunk_position"
                style="@style/title"
                android:text="@string/title_locate_trunk_position_reba" />

            <Spinner
                android:id="@+id/sp_locate_trunk_position"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/locate_trunk_position_reba"
                android:popupBackground="@drawable/spinner" />

            <CheckBox
                android:id="@+id/cb_reba_2a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_2a_1" />

            <CheckBox
                android:id="@+id/cb_reba_2a_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_2a_2" />

            <TextView
                android:id="@+id/tv_legs"
                style="@style/title"
                android:text="@string/title_legs_reba" />

            <Spinner
                android:id="@+id/sp_legs"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/legs_reba"
                android:popupBackground="@drawable/spinner" />

            <CheckBox
                android:id="@+id/cb_reba_3a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_3a_1" />

            <CheckBox
                android:id="@+id/cb_reba_3a_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_3a_2" />

            <TextView
                android:id="@+id/tv_load_score"
                style="@style/title"
                android:text="@string/title_load_score_reba" />

            <Spinner
                android:id="@+id/sp_load_score"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/load_score_reba"
                android:popupBackground="@drawable/spinner" />

            <CheckBox
                android:id="@+id/cb_reba_5a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_5a_1" />

            <TextView
                android:id="@+id/tv_upper_arm"
                style="@style/title"
                android:text="@string/title_upper_arm_reba" />

            <Spinner
                android:id="@+id/sp_upper_arm"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/upper_arm_reba"
                android:popupBackground="@drawable/spinner" />

            <CheckBox
                android:id="@+id/cb_reba_7a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_7a_1" />

            <CheckBox
                android:id="@+id/cb_reba_7a_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_7a_2" />

            <CheckBox
                android:id="@+id/cb_reba_7a_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_7a_3" />

            <TextView
                android:id="@+id/tv_lower_arm"
                style="@style/title"
                android:text="@string/title_lower_arm_reba" />

            <Spinner
                android:id="@+id/sp_lower_arm"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/lower_arm_reba"
                android:popupBackground="@drawable/spinner" />

            <TextView
                android:id="@+id/tv_wrist"
                style="@style/title"
                android:text="@string/title_wrist_reba" />

            <Spinner
                android:id="@+id/sp_wrist"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/wrist_reba"
                android:popupBackground="@drawable/spinner" />

            <CheckBox
                android:id="@+id/cb_reba_9a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reba_9a_1" />

            <TextView
                android:id="@+id/tv_coupling_score"
                style="@style/title"
                android:text="@string/title_coupling_score_reba" />

            <Spinner
                android:id="@+id/sp_coupling_score"
                style="@style/spinner"
                android:background="@drawable/spinner_bg"
                android:entries="@array/coupling_score_reba"
                android:popupBackground="@drawable/spinner" />

            <TextView
                android:id="@+id/tv_activity_score"
                style="@style/title"
                android:text="@string/title_activity_score" />

            <CheckBox
                android:id="@+id/cb_reba_activity_score_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_score1_reba" />

            <CheckBox
                android:id="@+id/cb_reba_activity_score_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_score2_reba" />

            <CheckBox
                android:id="@+id/cb_reba_activity_score_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_score3_reba" />

            <TextView
                android:id="@+id/tv_hasil"
                style="@style/tv_hasil" />

            <TextView
                android:id="@+id/tv_keterangan"
                style="@style/tv_keterangan" />

            <Button
                android:id="@+id/btn_hitung"
                style="@style/button"
                android:text="@string/hitung" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>