<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RebaActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adView"
        app:layout_constraintEnd_toEndOf="@+id/adView"
        app:layout_constraintStart_toStartOf="@+id/adView">

    <LinearLayout
        style="@style/wrapper_parent">

        <TextView
            android:id="@+id/tv_upper_arm"
            style="@style/title"
            android:text="@string/title_upper_arm_rula" />

        <Spinner
            android:id="@+id/sp_upper_arm"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@drawable/spinner"
            android:entries="@array/upper_arm_rula" />

        <CheckBox
            android:id="@+id/cb_rula_1a_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_1a_1"/>
        <CheckBox
            android:id="@+id/cb_rula_1a_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_1a_2"/>
        <CheckBox
            android:id="@+id/cb_rula_1a_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_1a_3"/>


        <TextView
            android:id="@+id/tv_lower_arm"
            style="@style/title"
            android:text="@string/title_lower_arm_rula" />

        <Spinner
            android:id="@+id/sp_lower_arm"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@drawable/spinner"
            android:entries="@array/lower_arm_rula" />
        <CheckBox
            android:id="@+id/cb_rula_2a_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_2a_1"/>

        <TextView
            android:id="@+id/tv_wrist"
            style="@style/title"
            android:text="@string/title_wrist_rula" />

        <Spinner
            android:id="@+id/sp_wrist"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@drawable/spinner"
            android:entries="@array/wrist_rula" />
        <CheckBox
            android:id="@+id/cb_rula_3a_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_3a_1"/>

        <TextView
            android:id="@+id/tv_wrist_twist"
            style="@style/title"
            android:text="@string/title_wrist_twist_rula" />

        <Spinner
            android:id="@+id/sp_wrist_twist"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@drawable/spinner"
            android:entries="@array/wrist_twist_rula" />

        <!--        <TextView-->
        <!--            android:id="@+id/tv_add_muscle_use_score"-->
        <!--            style="@style/title"-->
        <!--            android:text="@string/title_add_muscle_use_score_rula" />-->

        <!--        <Spinner-->
        <!--            android:id="@+id/sp_add_muscle_use_score"-->
        <!--            style="@style/spinner"-->
        <!--            android:background="@drawable/spinner_bg"-->
        <!--            android:popupBackground="@drawable/spinner"-->
        <!--            android:entries="@array/add_muscle_use_score_rula" />-->

        <TextView
            android:id="@+id/tv_add_muscle_use_score"
            style="@style/title"
            android:text="@string/title_rula_6a_1" />

        <CheckBox
            android:id="@+id/cb_rula_add_muscle_use_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_6a_1"/>

        <TextView
            android:id="@+id/tv_load_score"
            style="@style/title"
            android:text="@string/title_load_score_rula" />

        <Spinner
            android:id="@+id/sp_load_score"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@drawable/spinner"
            android:entries="@array/load_score_rula" />

        <TextView
            android:id="@+id/tv_locate_neck_position"
            style="@style/title"
            android:text="@string/title_locate_neck_position_rula" />

        <Spinner
            android:id="@+id/sp_locate_neck_position"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:popupBackground="@drawable/spinner"
            android:entries="@array/locate_neck_position_rula" />
        <CheckBox
            android:id="@+id/cb_rula_9a_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_9a_1"/>
        <CheckBox
            android:id="@+id/cb_rula_9a_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_9a_2"/>


        <TextView
            android:id="@+id/tv_locate_trunk_position"
            style="@style/title"
            android:text="@string/title_locate_trunk_position_rula" />

        <Spinner
            android:id="@+id/sp_locate_trunk_position"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:entries="@array/locate_trunk_position_rula"
            android:popupBackground="@drawable/spinner" />
        <CheckBox
            android:id="@+id/cb_rula_10a_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_10a_1"/>
        <CheckBox
            android:id="@+id/cb_rula_10a_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rula_10a_2"/>

        <TextView
            android:id="@+id/tv_legs"
            style="@style/title"
            android:text="@string/title_legs_rula" />

        <Spinner
            android:id="@+id/sp_legs"
            style="@style/spinner"
            android:background="@drawable/spinner_bg"
            android:entries="@array/legs_rula"
            android:popupBackground="@drawable/spinner" />

        <TextView
            android:id="@+id/tv_hasil"
            style="@style/tv_hasil"/>

        <TextView
            android:id="@+id/tv_keterangan"
            style="@style/tv_keterangan"/>

        <Button
            android:id="@+id/btn_hitung"
            style="@style/button"
            android:text="@string/hitung"/>

    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>